<resources>
    <string name="app_name">ProfileCreation</string>
    <string name="login">Login</string>\
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="retype_password">Re-type Password</string>
    <string name="name">Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="website">Website</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>